@@ -1104,13 +1104,15 @@ int fs_ml_event_loop(void)
             new_event->button.device = g_fs_ml_first_mouse_index;
             new_event->button.button = event.button.button;
 #ifdef MACOSX
-            if (new_event->button.button == 1) {
-                int mod = SDL_GetModState();
-                if (mod & KMOD_ALT) {
-                    new_event->button.button = 2;
-                }
-                else if (mod & KMOD_CTRL) {
-                    new_event->button.button = 3;
+            if (fs_emu_full_keyboard_emulation() == false) {
+                if (new_event->button.button == 1) {
+                    int mod = SDL_GetModState();
+                    if (mod & KMOD_ALT) {
+                        new_event->button.button = 2;
+                    }
+                    else if (mod & KMOD_CTRL) {
+                        new_event->button.button = 3;
+                    }
                 }
             }
 #endif
